move nested closebox button out and both it and welcome box into a div welcome message. hopefully fix close box not showing on mobile

--- a/styles/home.css
+++ b/styles/home.css
@@ -160,20 +160,15 @@ body {
         margin-left: 10rem;
     }
 
-    .welcomeBox {
+    .welcomeMessage {
         width: 75%;
-        font-size: 1.5rem;
         margin-top: 1rem;
         margin-bottom: 10%;
-        border-radius: 25px;
     }
 
-    .closeWelcomeBox {
-        opacity: 1;
-        position: relative;
-        top: 0.5rem;
-        right: 2rem;
-        z-index: 3;
+    .welcomeBox {
+        font-size: 1.5rem;
+        border-radius: 25px;
     }
 }
 
@@ -187,21 +182,15 @@ body {
         margin-left: 2rem;
     }
 
-    .welcomeBox {
+    .welcomeMessage {
         width: 75%;
-        font-size: 1.5rem;
         margin-top: 1rem;
         margin-bottom: 10%;
-        border-radius: 25px;
     }
 
-    .closeWelcomeBox {
-        height: 20px;
-        width: 20px;
-        position: absolute;
-        top: 0.5rem;
-        right: 2rem;
-        z-index: 3;
+    .welcomeBox {
+        font-size: 1.5rem;
+        border-radius: 25px;
     }
 
     .linkButtonsWrapper {
@@ -232,24 +221,22 @@ body {
     align-items: center;
 }
 
-.closeWelcomeBox {
-    height: 20px;
-    width: 20px;
-    position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
-    cursor: pointer;
-    z-index: 1;
+.welcomeMessage {
+    display: flex;
+    width: 55%;
+    height: fit-content;
+    margin-top: 1em;
+    align-items: center;
+    justify-content: center;
+    z-index: 0;
 }
 
 .welcomeBox {
     white-space: wrap;
-    width: 55%;
-    height: fit-content;
     font-size: 2rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: 2%;
+    padding: 1rem 2rem 1rem 2rem;
     text-align: center;
     background: rgba(87, 87, 87, 0.4);
     backdrop-filter: blur(10px);
@@ -257,18 +244,26 @@ body {
     align-items: center;
     justify-content: center;
     border-radius: 25px;
-    margin-top: 1em;
     box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.5);
-    z-index: 0;
+    z-index: 1;
 }
 
 .welcomeBox::after {
     opacity: .05;
-    content: '';
     height: 100%;
     position: absolute;
     border-radius: 25px;
-    z-index: 0;
+    z-index: 1;
+}
+
+.closeWelcomeBox {
+    height: 20px;
+    width: 20px;
+    position: relative;
+    bottom: 1.25rem;
+    right: 1.75rem;
+    cursor: pointer;
+    z-index: 2;
 }
 
 .linkButtonsWrapper {
